--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.mvc.view.prefix=/templates/
+
 spring.datasource.url=jdbc:mysql://localhost:3306/contact_book?create=true
 spring.datasource.username=root
 spring.datasource.password=root
