--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.mvc.view.prefix=/templates/
+spring.devtools.add-properties=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/contact_book?create=true
 spring.datasource.username=root
