--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mvc.view.prefix=/templates/
 spring.devtools.add-properties=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/contact_book?create=true
+spring.datasource.url=jdbc:mysql://localhost:3306/contact_book
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
