--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.mvc.view.prefix=/templates/
 spring.devtools.add-properties=true
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=${JDBC_DATASOURCE_URL}
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
