--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
+
 spring.mvc.view.prefix=/templates/
 spring.devtools.add-properties=true
-spring.datasource.url=${JDBC_DATASOURCE_URL}
+
+spring.datasource.url=jdbc:mysql://db4free.net:3306/contact_book_spr?verifyServerCertificate=false
+spring.datasource.username=luquinhas_br
+spring.datasource.password=155777399
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
