--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.mvc.view.prefix=/templates/
 spring.devtools.add-properties=true
 
-spring.datasource.url=jdbc:mysql://db4free.net:3306/contact_book_spr?verifyServerCertificate=false
-spring.datasource.username=luquinhas_br
-spring.datasource.password=155777399
+spring.datasource.url=jdbc:mysql://localhost:3306/contact_book
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
